2008-01-30  Stefan Kost  <ensonic@users.sf.net>

	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.h:
	  Add testcase for #512154.

2008-01-30  Stefan Kost  <ensonic@users.sf.net>

	reviewed by: <delete if not using a buddy>
	patch by: <delete if not someone else's patch>

	* gtkdoc-mkman.in:
	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.h:

2008-01-28  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Condense all the multiple newlines in the generated xml.

	* tests/gtk-doc.make:
	  Make sure the testsuite call the uninstalled scripts.

2008-01-24  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.xsl:
	  Unbreak fixxref. The index.sgml file should not have leading
	  whitespace. These were caused by indenting the xsl, which is dangerous
	  in case of <xsl:text>.

	* gtkdoc-fixxref.in:
	  Debug logging.

2008-01-21  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-common.pl.in:
	  Don't warn when parsing enum struct members.

2008-01-21  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	* gtkdoc-mktmpl.in:
	  Give file and line number when complaining about duplicate
	  definitions. Seems to not have been applied with older commit.

	* gtkdoc-scan.in:
	* tests/gobject/src/gobject.h:
	  Handle typedef enums.

2008-01-17  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	  Don't fail in dist when no .types file is present. Fixes #509539.

2008-01-16  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	* gtkdoc-mktmpl.in:
	  Give file and line number when complaining about duplicate
	  definitions.

2008-01-14  Stefan Kost  <ensonic@users.sf.net>

	patch by: Joe Marcus Clarke <marcus@freebsd.org>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	  Do not abort the build, if gtk-doc is not installed. Fixes #508897

2007-12-20  Mathias Hasselmann  <mathias@openismus.com>

	* configure.in:
	Lower Python dependency to 2.3 (#503054). Just warn when Python