@@ -106,7 +106,7 @@ enum _Bug446648 {
  * http://bugzilla.gnome.org/show_bug.cgi?id=512154
  */
 typedef struct {
-  unsigned long        index;
+  unsigned long index;
 } Bug512154;
 
 #endif // GTKDOC_TESTER_H
