@@ -1,3 +1,11 @@
+2008-02-01  Stefan Kost  <ensonic@users.sf.net>
+
+	* gtkdoc-common.pl.in:
+	* gtkdoc-mkdb.in:
+	* gtkdoc-mktmpl.in:
+	* tests/bugs/src/tester.h:
+	  Improve tmpl parsing and add some more logging. Fixes #512154.
+
 2008-01-30  Stefan Kost  <ensonic@users.sf.net>
 
 	* tests/bugs/docs/tester-sections.txt:
